# maximus-client

./: .gitignore  DEPLOYMENT.md  DEPLOY_NOW.md  MANIFEST.in  README.md  deploy.bat  deploy.py  example.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
docs/: README.md  api-reference.md  examples.md
examples/: full_example.py
maximus/: __init__.py  client.py  connection.py  database.py  events.py  session.py  storage.py  types.py  utils.py
src/maximus/: __init__.py  client.py
src/maximus/_internal/: auth_manager.py  connection.py  constants.py  data_manager.py  event_dispatcher.py  interfaces.py  mappers.py  session.py
src/maximus/errors/: __init__.py  api.py  auth.py  base.py  connection.py
src/maximus/types/: __init__.py  base.py
src/maximus/types/api/: __init__.py  chat.py  message.py  user.py
src/maximus/types/enums/: __init__.py  chat_type.py
